# sonic-host-services

./: .bazelrc  BUILD.bazel  MODULE.bazel  annotations.toml  multitool.lock.json  pyproject.toml
data/: BUILD.bazel
scripts/: aaastatsd  caclmgrd  determine-reboot-cause  featured  hostcfgd  procdockerstatsd  process-reboot-cause  sonic-host-server
testdata/: dist.expected.txt  sdist.expected.txt
